examples/exploit-example/klee-out-0/test000001.ptr.err
Error: memory error: out of bound pointer
File: test.cc
Line: 26
assembly.ll line: 635
Stack: 
	#000000635 in __user_main (=1, =61831936) at test.cc:26
	#100000395 in __uClibc_main (main=85626376, argc=1, argv=61831936, app_init=0, app_fini=0, rtld_fini=0, stack_end=0) at libc/misc/internals/__uClibc_main.c:401
	#200000571 in main (=1, =61831936)
Info: 
	address: (Concat w64 171
             (Concat w56 171
                         (Concat w48 171
                                     (Concat w40 171
                                                 (ReadLSB w32 8 temp)))))
	example: 12370169552430956544
	range: [12370169552430956544, 12370169556725923839]
	next: object at 61034240 of size 640
		MO139[640] allocated at __new_exitfn():  %call = call noalias i8* @realloc(i8* %3, i64 %mul) #13, !dbg !1642
